# group-theory

./: CHANGELOG.md  CONTRIBUTING.md  README.md  cabal.haskell-ci  default.nix  group-theory.cabal
.github/workflows/: ci.yml  haskell-ci.yml
src/Control/Applicative/: Cancelative.hs  Cancellative.hs
src/Data/: Group.hs
src/Data/Group/: Additive.hs  Cyclic.hs  Finite.hs  Foldable.hs  Free.hs  Internal.hs  Multiplicative.hs  Order.hs  Permutation.hs  Quaternion.hs  Simple.hs
src/Data/Group/Additive/: Class.hs
src/Data/Group/Cyclic/: Class.hs
src/Data/Group/Finite/: Class.hs
src/Data/Group/Free/: Church.hs  Internal.hs  Product.hs
src/Data/Group/Internal/: Exponent.hs  Singletons.hs
src/Data/Group/Multiplicative/: Class.hs
src/Data/Group/Permutation/: Class.hs
src/Data/Group/Simple/: Class.hs
test/: doctests.hs
