cabal-version:   2.0
name:            group-theory
version:         0.2.0.0
synopsis:        The theory of groups
description:
  This package includes definitions for Groups (monoids with invertibility), including
  finite, fre, simple, cyclic, and permutation groups. Additionally, we add the concept
  of 'Cancellative' functors, building upon 'Alternative' applicative functors.
  .
  There is plenty of other group theory related packages on Hackage:
  .
  * [groups](https://hackage.haskell.org/package/groups): minimal definition and lots of good instances.
  .
  * [magmas](https://hackage.haskell.org/package/magmas): good pedagogy
  .
  * [monoids](https://hackage.haskell.org/package/monoids): deprecated in favor of [reducers](https://hackage.haskell.org/package/reducers), which don't have @Data.Group@
  .
  * [arithmoi](https://hackage.haskell.org/package/arithmoi): Have cyclic groups, but also much more numerics
  .
  @group-theory@ tries to combine the best parts.

homepage:        https://github.com/emilypi/group-theory
bug-reports:     https://github.com/emilypi/group-theory/issues
license:         BSD3
license-file:    LICENSE
author:          Emily Pillmore
maintainer:      emilypi@cohomolo.gy
copyright:       (c) 2020 Emily Pillmore <emilypi@cohomolo.gy>
category:        Algebra, Math, Permutations, Groups
build-type:      Custom
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.2

source-repository head
  type:     git
  location: https://github.com/emilypi/group-theory.git

custom-setup
  setup-depends:
      base           >=4.11 && <5
    , Cabal
    , cabal-doctest

library
  exposed-modules:
    Control.Applicative.Cancellative
    Data.Group
    Data.Group.Additive
    Data.Group.Cyclic
    Data.Group.Finite
    Data.Group.Foldable
    Data.Group.Free
    Data.Group.Free.Church
    Data.Group.Multiplicative
    Data.Group.Permutation

  build-depends:
      base        >=4.11 && <5
    , containers  >=0.5  && <0.7
    , groups      ^>=0.5

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite doctests
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  build-depends:
      base          >=4.11 && <5
    , doctest
    , group-theory

  hs-source-dirs:    test
  ghc-options:       -Wall -threaded
  x-doctest-options: --fast
